# sipxecs

sipXdigium/: .project  Makefile.am  configure.ac  sipxdigium.spec.in
sipXdigium/etc/: Makefile.am
sipXdigium/etc/digium/: contacts.xml.vm  digium.xml.vm  line.properties  line.xml  phone.properties  phone.xml  smartblf.xml.vm  types.xml
sipXdigium/src/: Makefile.am  common.am  sipxplugin.beans.xml
sipXdigium/src/org/sipfoundry/sipxconfig/phone/digium/: DigiumLineDefaults.java  DigiumModel.java  DigiumPhone.java  DigiumPhoneDefaults.java  DirectoryConfiguration.java  PhoneConfiguration.java  SpeedDialConfiguration.java
sipXdigium/test/: Makefile.am
sipXdigium/test/org/sipfoundry/sipxconfig/phone/digium/: DigiumPhoneTest.java
